--- a/tf.tex
+++ b/tf.tex
@@ -15,7 +15,7 @@
 \newtheorem{definition}{Definición}
 \newenvironment{proof}{\paragraph{Demostración:}}{\hfill$\square$}
 
-\author{ Alumno: Exequiel Aguirre \\ Directora: Linda V. Saal}
+\author{ Alumno: Exequiel Aguirre \\ Directora: Dra. Linda V. Saal}
 \title{Subgrupos discretos del grupo de Heisenberg }
 \date{Julio de 2014}
 
