--- a/tf.tex
+++ b/tf.tex
@@ -125,7 +125,7 @@ Notar que $e_1$ y $f_1$, son linealmente independientes, pues si $e_1=c f_1$ con
 entonces $\psi(e_1,f_1)=\psi(c f_1,f_1)=0$
 
 
-Sea $P_1=<e_1,f_1>$ el $\mathbb{Z}$-módulo generado por los elementos $e_1,f_1$
+Sea $P_1=<e_1,f_1>$ el $\mathbb{Z}$-módulo(\textcolor{red}{el espacio vectorial generado por los elementos...?}) generado por los elementos $e_1,f_1$
     
 Dado que $\psi(e_1,f_1)=1$ y $\psi$ es alternante, tenemos que:
 \begin{itemize}
@@ -346,7 +346,7 @@ Dado que $\alpha$ y $\theta$ son automorfismos, $\theta \alpha$ lo es. Además $
 un automorfismo como el visto en el caso anterior, y por ende,
 $$\alpha=
 \theta
-\delta_{a^{1/2}}
+\delta_{\textcolor{red}{(-a)}^{1/2}}
 \begin{bmatrix}
 S & 0\\
 0 & 1
