--- a/presentacion.tex
+++ b/presentacion.tex
@@ -187,7 +187,7 @@ Con,
  Notemos, que  $\Gamma \cap Z$ es un subgrupo discreto, no trivial, de $Z$ y 
 por ende existe un único real positivo $\beta(\Gamma)$ tal que:
 $$
-\Gamma \cap Z=\beta(\Gamma) \mathbb{Z}.
+\Gamma \cap Z=\{(0,\beta(\Gamma) m : m \in \mathbb{Z}\}.
 $$
 
 Consideremos $\pi :\mathbb{H}_{n}\rightarrow \mathbb{C}^{n}$  definida por $\pi (v,t)=v$
@@ -197,7 +197,7 @@ entonces $\pi(\Gamma)$ es una lattice de $\mathbb{C}^n$.
 \begin{frame}
  Además, el hecho de que
 $$\begin{aligned}
-{[} \Gamma,\Gamma {]} \subseteq \Gamma \cap Z = \beta(\Gamma) \mathbb{Z}
+{[} \Gamma,\Gamma {]} \subseteq \Gamma \cap Z = \{(0,\beta(\Gamma) m : m \in \mathbb{Z}\}
 \end{aligned}$$
 impone algunas condiciones especiales a $\pi(\Gamma)$.
 Sean $h=(v,t),g=(v',s) \in \Gamma$, entonces ${[}h,g{]}=h^{-1}g^{-1}hg=(0,\psi(v,v'))$ 
