--- a/tf.tex
+++ b/tf.tex
@@ -377,7 +377,7 @@ es un subgrupo abeliano de $\mathbb{A}_n$ isomorfo a $R^{2n}$.
 Notemos, que  $\Gamma \cap Z$ es un subgrupo discreto, no trivial, de $Z$ y 
 por ende existe un único real positivo $\beta(\Gamma)$ tal que:
 $$
-\Gamma \cap Z=\beta(\Gamma) \mathbb{Z}.
+\Gamma \cap Z=\{(0,\beta(\Gamma) m : m \in \mathbb{Z}\}.
 $$
 
 Consideremos $\pi :\mathbb{H}_{n}\rightarrow \mathbb{C}^{n}$  definida por $\pi (v,t)=v$
@@ -385,7 +385,7 @@ entonces $\pi(\Gamma)$ es una lattice de $\mathbb{C}^n$.
 
 Además, el hecho de que
 $$\begin{aligned}
-{[} \Gamma,\Gamma {]} \subseteq \Gamma \cap Z = \beta(\Gamma) \mathbb{Z}
+{[} \Gamma,\Gamma {]} \subseteq \Gamma \cap Z = \{(0,\beta(\Gamma) m : m \in \mathbb{Z}\}
 \end{aligned}$$
 impone algunas condiciones especiales a $\pi(\Gamma)$.
 Sean $h=(v,t),g=(v',s) \in \Gamma$, entonces ${[}h,g{]}=h^{-1}g^{-1}hg=(0,\psi(v,v'))$ 
@@ -624,7 +624,7 @@ Pero entonces, $\tilde{D}=\frac{1}{l^{1/2}} D = \alpha(D(\ell)) \Rightarrow D=\a
  $\Gamma = \delta_{l^{\frac{1}{2}}} \alpha (\Gamma(\ell))$
 \end{corollary}
 \begin{proof}
- Recordemos que ${[}\Gamma,\Gamma{]}=l l_1 \mathbb{Z}$.
+ Recordemos que ${[}\Gamma,\Gamma{]}=\{(0,l l_1 m): m\in \mathbb{Z}\}$.
  
  Sea $D:=\pi(\Gamma)=\alpha(l^{1/2} D(\ell))$.
  Sea 
@@ -652,7 +652,7 @@ $$
   l^{1/2}\alpha(D(\ell))=D=\pi(\Gamma)
   $$
   
-  $${[}\tilde{\Gamma},\tilde{\Gamma}{]}=l l_1 \mathbb{Z}, $$
+  $${[}\tilde{\Gamma},\tilde{\Gamma}{]}=\{(0,l l_1 m): m\in \mathbb{Z}\},  $$
  
  por lo que concluimos que $\tilde{\Gamma}=\Gamma$.
 \end{proof}
